<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyApp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/MyTeams"
                android:layout_width="312dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:elevation="2pt"
                app:cornerRadius="6dp"
                android:text="@string/MainActivity_MyTeamsButtonText"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/NewMatch"
                android:layout_width="312dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:elevation="2pt"
                app:cornerRadius="6dp"
                android:text="@string/MainActivity_NewMatchButtonText"/>
            <!--                android:textAppearance="@style/textAppearanceButton"-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ResumeMatch"
                android:layout_width="312dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:elevation="2pt"
                app:cornerRadius="6dp"
                android:text="@string/MainActivity_ResumeButtonText"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Tournamets"
                android:layout_width="312dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:elevation="2pt"
                app:cornerRadius="6dp"
                android:text="@string/MainActivity_TournamentButtonText"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/History"
                android:layout_width="312dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:elevation="2pt"
                app:cornerRadius="6dp"
                android:text="@string/MainActivity_HistoryMatchesButtonText"/>

        </LinearLayout>

    </LinearLayout>

<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:layout_editor_absoluteX="48dp"-->
<!--        tools:layout_editor_absoluteY="665dp"-->
<!--        android:gravity="center"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        tools:visibility="visible" />-->

</RelativeLayout>